2020-09-30 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Compiled definitions without GIO
	* Add MC, MS, M+, M- commands and MR/MRC variable in qalc

2020-09-25 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Improve plot (and genvector()) speed for user functions
	* Fix show information for multiple matching objects in qalc
	* Add yr and annus names for year unit, röntgen name for roentgen (R) unit, and rem for roentgen equivalent man
	* Add Rutherford (Rd), millirem (mrem), mrem/s, and erg/g units
	* Show radioactivity in rem_radioactivity as suffix (subscript)

2020-09-18 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Allow scientific e-notation without preceding digit, e.g. E2=1E2, with warning message

2020-09-17 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Do not save x, y, and z as user variables if global variables are not loaded

2020-09-14 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Show information for all matching objects (if there are multiple objects with the same name) with info command
	* Show information about prefixes with the info command and list prefixes with find command, "list prefixes", and --list-prefixes
	* Use thin space on Windows 10
	* Remove ending white-space from from expression when separating "to"-expression;

2020-09-11 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix cot(pi/2), coth(pi/2*i), arccot(0), arcsch(0), and arcoth(0), and simplify inverse sec, csc, and cot
	* Show currencies in parsed expression using ISO 4217 code (e.g. USD instead dollar)
	* Do not use "$", "dollar", and "dollars" for USD and remove cent, if symbol for local currency is "$"
	* Do not use "£" as symbol for GBP if symbol for local currency is "£"

2020-09-09 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Use thin space on Windows 10
	* Use B as abbreviation for byte instead of bel
	* Show information for all matching objects (if there are multiple objects with the same name) with info command